# lemonade

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ibus/: CMakeLists.txt  application.h.in  engine-compat.cpp  engine-compat.h  gtypes.h  lemonade.xml.in  lemonade_engine.cpp  lemonade_engine.h  main.cpp
lemonade/: CMakeLists.txt  client.cpp  data.h  json_interop.h  main.cpp  model_inventory.cpp  model_inventory.h  model_manager.h  server.cpp  translation_client.cpp  translation_client.h  translation_server.cpp  translator.cpp  translator.h  utils.h
lemonade/ibus/: CMakeLists.txt  application.h  application.h.in  engine_compat.cpp  engine_compat.h  gtypes.h  lemonade_engine.cpp  lemonade_engine.h  main.cpp
lemonade/lib/: CMakeLists.txt  json_interop.h  logging.cpp  logging.h  model_inventory.cpp  model_inventory.h  model_manager.h  translation_client.cpp  translation_client.h  translation_server.cpp  translation_server.h  translator.cpp  translator.h  utils.cpp  utils.h
scripts/: model_manager.py
src/: Network.h  main.cpp
